--- a/Resources/config/services/components.yml
+++ b/Resources/config/services/components.yml
@@ -96,3 +96,4 @@ services:
         arguments:
             - @security.context
             - @ccdn_forum_forum.component.helper.post_lock
+            - @ccdn_forum_forum.component.helper.role_transformer
