Hardcoded models to interfaces, added Resolver pass (robbed from Sylius)

--- a/Resources/config/doctrine/Board.orm.yml
+++ b/Resources/config/doctrine/Board.orm.yml
@@ -33,12 +33,12 @@ CCDNForum\ForumBundle\Entity\Board:
             nullable: true
     oneToMany:
         topics:
-            targetEntity: CCDNForum\ForumBundle\Entity\Topic
+            targetEntity: CCDNForum\ForumBundle\Entity\TopicInterface
             mappedBy: board
             cascade: ["remove"]
     manyToOne:
         category:
-            targetEntity: CCDNForum\ForumBundle\Entity\Category
+            targetEntity: CCDNForum\ForumBundle\Entity\CategoryInterface
             inversedBy: boards
             nullable: true
             joinColumn:
@@ -46,7 +46,7 @@ CCDNForum\ForumBundle\Entity\Board:
                 referencedColumnName: id
                 onDelete: SET NULL
         lastPost:
-            targetEntity: CCDNForum\ForumBundle\Entity\Post
+            targetEntity: CCDNForum\ForumBundle\Entity\PostInterface
             cascade: ["persist", "detach"]
             nullable: true
             joinColumn:
