--- a/Resources/config/doctrine/Subscription.orm.yml
+++ b/Resources/config/doctrine/Subscription.orm.yml
@@ -16,7 +16,7 @@ CCDNForum\ForumBundle\Entity\Subscription:
             nullable: false
     manyToOne:
         forum:
-            targetEntity: CCDNForum\ForumBundle\Entity\Forum
+            targetEntity: CCDNForum\ForumBundle\Entity\ForumInterface
             cascade: []
             nullable: true
             joinColumn:
@@ -24,7 +24,7 @@ CCDNForum\ForumBundle\Entity\Subscription:
                 referencedColumnName: id
                 onDelete: SET NULL
         topic:
-            targetEntity: CCDNForum\ForumBundle\Entity\Topic
+            targetEntity: CCDNForum\ForumBundle\Entity\TopicInterface
             cascade: ["persist"]
             inversedBy: subscriptions
             nullable: true
