--- a/Resources/config/doctrine/Topic.orm.yml
+++ b/Resources/config/doctrine/Topic.orm.yml
@@ -43,16 +43,16 @@ CCDNForum\ForumBundle\Entity\Topic:
             nullable: true
     oneToMany:
         posts:
-            targetEntity: CCDNForum\ForumBundle\Entity\Post
+            targetEntity: CCDNForum\ForumBundle\Entity\PostInterface
             mappedBy: topic
             cascade: ["persist", "remove"]
         subscriptions:
-            targetEntity: CCDNForum\ForumBundle\Entity\Subscription
+            targetEntity: CCDNForum\ForumBundle\Entity\SubscriptionInterface
             mappedBy: topic
             cascade: ["persist", "remove"]
     manyToOne:
         board:
-            targetEntity: CCDNForum\ForumBundle\Entity\Board
+            targetEntity: CCDNForum\ForumBundle\Entity\BoardInterface
             inversedBy: topics
             cascade: ["persist"]
             joinColumn:
@@ -60,14 +60,14 @@ CCDNForum\ForumBundle\Entity\Topic:
                 referencedColumnName: id
                 onDelete: SET NULL
         firstPost:
-            targetEntity: CCDNForum\ForumBundle\Entity\Post
+            targetEntity: CCDNForum\ForumBundle\Entity\PostInterface
             cascade: ["persist", "remove"]
             joinColumn:
                 name: fk_first_post_id
                 referencedColumnName: id
                 onDelete: SET NULL
         lastPost:
-            targetEntity: CCDNForum\ForumBundle\Entity\Post
+            targetEntity: CCDNForum\ForumBundle\Entity\PostInterface
             cascade: ["persist", "remove"]
             nullable: true
             joinColumn:
