variable class rather than hardcoded entity

--- a/Resources/config/services/forms-topic.yml
+++ b/Resources/config/services/forms-topic.yml
@@ -11,6 +11,7 @@ services:
         class: %ccdn_forum_forum.form.type.topic_create.class%
         arguments:
             - %ccdn_forum_forum.entity.topic.class%
+            - %ccdn_forum_forum.entity.board.class%
 
     ccdn_forum_forum.form.handler.topic_create:
         class: %ccdn_forum_forum.form.handler.topic_create.class%
